--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,12 @@
 android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-
+<ProgressBar
+    style="@android:style/Widget.ProgressBar.Horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/progress">
+</ProgressBar>
     <ListView android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
