--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,8 +9,20 @@ android:orientation="vertical"
     android:layout_height="wrap_content"
     android:id="@+id/progress">
 </ProgressBar>
-    <ListView android:id="@+id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="2.0" />
+
+<EditText android:id="@+id/EditText"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone"/>
+
+<Button android:id="@+id/Button"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    android:onClick="ButtonOnClick"/>
+
+<ListView android:id="@+id/list"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="2.0" />
 </LinearLayout>
